# Voxigen

./: CMakeLists.txt  CMakePresets.json  CkBk-minTest.cpp  Direct-minTest.cpp  VoxTest.cpp  VoxTree.cpp  VoxTree.hpp
resources/shaders/: simple_es.vert  simple_shader.vert  simple_shader.vert.spv
